[project]
name = "pushward-hacs"
version = "0.1.0"
description = "A guided PushWard integration for Home Assistant with staged, template-aware setup flows"
readme = "README.md"
requires-python = ">=3.13.2"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/pushward_hacs"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13.300",
    "aiohttp>=3.11",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
